# compara_planilha

./: README.md  compara_planilha.py  pyproject.toml
