[project]
name = "poetry add pandas"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcel Fraga",email = "arqmarcel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
